k8s/apps/landing-page/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
  namespace: web
  labels:
    app: landing-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: web
        image: joshdarcy/homelab-landing:v11
        ports:
        - containerPort: 80
