k8s/apps/landing-page/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-page-ingress
  namespace: web
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - joshdarcy.xyz
    secretName: landing-page-tls
  rules:
  - host: joshdarcy.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing-page
            port:
              number: 80
